test: 테스트 코드 2차 수정